# ros2_robot_test

./: .gitignore  MIGRATION_GUIDE.md  project_architecture.md
docs/: phase4_8_final_integration_report.md  phase4_8_fix_report_3rd.md  phase4_8_remaining_impl_report.md  phase4_8_runtime_fix_report.md  phase4_9_gui_and_sensor_fix_report.md  phase5_bugfix_report.md  phase5_multirobot_architecture_and_zmq_guide.md
pinky_core/: CMakeLists.txt  test_gif  test_gif.cpp
pinky_core/config/: rl_config.yaml  robot_config.yaml
pinky_core/include/pinky_core/app/: robot_app.h
pinky_core/include/pinky_core/core/: emotion_renderer.h  sensor_fusion.h
pinky_core/include/pinky_core/hal/: cv_camera.h  dynamixel_motor.h  opencv_camera.h  rpicam_capture.h
pinky_core/src/app/: config_loader.cpp  main.cpp  robot_app.cpp
pinky_core/src/core/: emotion_renderer.cpp  lidar_processor.cpp  sensor_fusion.cpp
pinky_core/src/hal/: bno055_imu.cpp  cv_camera.cpp  dynamixel_motor.cpp  ili9341_lcd.cpp  opencv_camera.cpp  rpicam_capture.cpp  sllidar_driver.cpp
pinky_core/src/net/: tcp_server.cpp
pinky_station/pinky_station/gui/: main_window.py
pinky_station/pinky_station/gui/widgets/: battery_widget.py  lidar_view.py  map_widget.py  teleop_widget.py  terminal_widget.py  toolbar.py  video_view.py
pinky_station/pinky_station/net/: connection.py
pinky_station/pinky_station/protocol/: pinky_pb2.py
pinky_station/pinky_station/resources/styles/: dark.qss
pinky_station/pinky_station/workers/: nav_worker.py
pinky_station/tests/: test_network_loopback.py
